# AegisClaim_Engine

./: Dockerfile  LICENSE  README.md  docker-compose.yml  list_models.py  pyproject.toml  requirements.txt  test_requirements.txt
app/: config.py  main.py
app/api/endpoints/: claims.py
app/core/: config.py
app/schemas/: claim.py  document.py
app/services/: __init__.py  claim_processor.py  document_processor.py
app/services/agents/: __init__.py  base_agent.py  base_extraction_agent.py  bill_agent.py  classifier_agent.py  discharge_agent.py  id_card_agent.py  lab_report_agent.py  prescription_agent.py
app/utils/: logging.py
tests/: conftest.py
tests/unit/services/agents/: test_classifier_agent.py
